--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
-spring.datasource.url=jdbc:mysql://localhost:3306/chat_room
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.url=jdbc:postgresql://14.225.205.222:5432/chat_room
+spring.datasource.username=hieubap
+spring.datasource.password=Aikhocnoidaunay.1
 
-server.port=8800
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+server.port=8801
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 #spring.datasource.platform=mysql
 
